--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "task-manager-frontend",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^1.7.9",
