--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "webpack --mode production",
+    "test": "jest",
     "eject": "react-scripts eject"
-  },
+  }
   "dependencies": {
     "axios": "^1.7.9",
     "primeflex": "^3.3.1",
